// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator renders active with custom percentage 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-82dnp8 {
  height: 40px;
  width: 40px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-82dnp8 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders active with default percentage 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-82dnp8 {
  height: 40px;
  width: 40px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-82dnp8 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders default props 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color beta 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: beta; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color black 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: black; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color blue 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: blue; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color chartGreen 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: chartGreen; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color chartNegativeRed 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: chartNegativeRed; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with custom size 1`] = `
<DocumentFragment>
  .cache-13skzuh {
  height: 100px;
  width: 100px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-13skzuh e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with inlined color 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #ff0000; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with inlined trailColor 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #ff0000; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with percentage 75 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-82dnp8 {
  height: 40px;
  width: 40px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-82dnp8 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 65.97344572538566px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="75%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="75"
    >
      75%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with strokeWidth 25 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-37.5
      a 37.5,37.5 0 1 1 0,75
      a 37.5,37.5 0 1 1 0,-75
    "
        fill-opacity="0"
        stroke-width="25"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 235.61944901923448px 235.61944901923448px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-37.5
      a 37.5,37.5 0 1 1 0,75
      a 37.5,37.5 0 1 1 0,-75
    "
        fill-opacity="0"
        stroke-width="25"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 235.61944901923448px 235.61944901923448px; stroke-dashoffset: 188.4955592153876px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with text 100% 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
      <text
        class="CircularProgressbar-text"
        style="dominant-baseline: middle; fill: #4f0599; font-size: 26px; text-anchor: middle;"
        x="50"
        y="50"
      >
        100%
      </text>
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor beta 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: beta; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor black 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: black; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor blue 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: blue; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor chartGreen 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: chartGreen; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor chartNegativeRed 1`] = `
<DocumentFragment>
  .cache-5i4mj9 {
  height: 40px;
  width: 40px;
}

<div
    aria-hidden="true"
  >
    <svg
      class="CircularProgressbar  cache-5i4mj9 e7dhm9i1"
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: chartNegativeRed; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
      />
    </svg>
  </div>
  .cache-546l7a {
  visibility: hidden;
  position: absolute;
}

<div
    class="cache-546l7a e7dhm9i0"
  >
    <label
      for="input-6c756c756c756c756c756c756c756c75"
    >
      Loading test
    </label>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      id="input-6c756c756c756c756c756c756c756c75"
      max="100"
      value="20"
    >
      20%
    </progress>
  </div>
</DocumentFragment>
`;
